added a validation based on a class